@@ -4,7 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 MOD_PODCASTMANAGERFEED="Podcast Manager Feed Listing"
-MOD_PODCASTMANAGERFEED_FIELD_AUTHOR_DESCRIPTION="Choose whether to display the podcast's author."
+MOD_PODCASTMANAGERFEED_FIELD_AUTHOR_DESCRIPTION="Choose whether to display the podcast's author.  This will not display if the player is enabled."
 MOD_PODCASTMANAGERFEED_FIELD_AUTHOR_LABEL="Show podcast author"
 MOD_PODCASTMANAGERFEED_FIELD_COUNT_DESC="The number of podcast episodes to display."
 MOD_PODCASTMANAGERFEED_FIELD_COUNT_LABEL="Count"
@@ -14,4 +14,6 @@ MOD_PODCASTMANAGERFEED_FIELD_DESCRIPTION_DESCRIPTION="Choose whether to display 
 MOD_PODCASTMANAGERFEED_FIELD_DESCRIPTION_LABEL="Show podcast summary"
 MOD_PODCASTMANAGERFEED_FIELD_FEEDNAME_DESCRIPTION="The feed to link this module to."
 MOD_PODCASTMANAGERFEED_FIELD_FEEDNAME_LABEL="Feed"
+MOD_PODCASTMANAGERFEED_FIELD_SHOW_ITEM_PLAYER_DESCRIPTION="If set to yes, then display the media player for each listed episode.  The Podcast Manager Content Plugin must be enabled for this player to render."
+MOD_PODCASTMANAGERFEED_FIELD_SHOW_ITEM_PLAYER_LABEL="Show Podcast Player"
 MOD_PODCASTMANAGERFEED_XML_DESCRIPTION="The Podcast Manager Feed Listing module provides a list of the latest published podcast episodes in a specified feed."
