@@ -71,6 +71,17 @@
 					<option
 						value="1">JYES</option>
 				</field>
+				<field
+					name="show_item_player"
+					type="radio"
+					default="0"
+					label="MOD_PODCASTMANAGERFEED_FIELD_SHOW_ITEM_PLAYER_LABEL"
+					description="MOD_PODCASTMANAGERFEED_FIELD_SHOW_ITEM_PLAYER_DESCRIPTION">
+					<option
+						value="0">JNO</option>
+					<option
+						value="1">JYES</option>
+				</field>
 			</fieldset>
 			<fieldset
 				name="advanced">
