@@ -1,3 +1,6 @@
+26-February-2012 Michael Babker
++ [#23] Allow the media player in the feed listing module
+
 4-February-2012 Michael Babker
 + [#37] Add ability to override player in content plugin
 
